# BicameriS

./: .gitattributes  .gitignore  DEVELOPMENT-CONTEXT.md  Dockerfile  INSTALL.md  LICENSE  README.md  bug BICAM.txt  bug.txt  check_lmstudio.bat  config.example.yaml  dev.md  docker-compose.yaml  launcher.py  pyproject.toml  requirements.txt  run_config.py  start_ui.bat
.agent/: agent.yaml
ZONE_AETHERIS/: config.json  orchestrator.py  seed_prompt.md
ZONE_AETHERIS/agents/: aetheris_agent.py
ZONE_AETHERIS/core/: __init__.py  agent_manager.py  entropy_generator.py  evolving_journal.py  filesystem.py  memory.py  metacognition.py  mirror_loop.py  self_critique.py  shell.py  values.py  vector_memory.py
ZONE_AETHERIS/memory/: journal.md  memories.db  memories.json
ZONE_PARTAGEE/: tasks.md
ZONE_RESERVEE/: app.py
ZONE_RESERVEE/config/: advanced_presets.json
ZONE_RESERVEE/core_reserved/: api_client.py  auto_scaffolding.py  autonomous_thinker.py  conductor.py  corps_calleux.py  flux.py  left_hemisphere.py  model_scanner.py  paradoxical_sleep.py  right_hemisphere.py  task_manager.py  thought_inception.py  traumatic_memory.py  web_search.py
ZONE_RESERVEE/templates/: chat.html  dashboard.html  files.html  index.html  models.html  tasks.html  think.html
core/agents/: agent_factory.py  agent_system.py  auto_scaffolding.py  base_agent.py  bicameral_skills.py  command_router.py  data_tools_registration.py  editor_tools.py  editor_tools_registration.py  implementations.py  session_manager.py  simple_tools.py  super_agent.py  tool_permission.py  tool_registry.py  web_tools.py  web_tools_registration.py
core/cognition/: auto_optimizer.py  auto_tune.py  autonomous_scaffolding.py  autonomous_thinker.py  braincache_integration.py  cognitive_hooks.py  conductor.py  corps_calleux.py  dreamer_agent.py  left_hemisphere.py  llm_load_balancer.py  reasoning_kernel.py  reformulation_engine.py  (+6 more)
docker/: prometheus.yml
docs/: security.md
frontend/: index.html  package-lock.json  package.json
scripts/: test_braincache.py
server/: extensions.py  main.py  middlewares.py
tests/: __init__.py  conftest.py
(+183 files in other folders)
